[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "eyescan"
authors = [
    { name = "Antmicro" }
]
description = "Simple utility to connect to DAC38J8x and perform eyescan measurements"
license = {file ="LICENSE"}
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]

[project.scripts]
eyescan = 'eyescan.eyescan:main'
